[project]
name = "flux-context-comfyui"
version = "1.0.0"
description = "ComfyUI node for Flux Context (Kontext) image editing"
authors = [
    {name = "Leonardo Miramondi", email = "leonardo@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "Pillow>=8.0.0",
    "torch>=1.9.0",
    "numpy>=1.21.0"
]

[project.urls]
Homepage = "https://github.com/leonardomiramondi/flux-context-comfyui"
Repository = "https://github.com/leonardomiramondi/flux-context-comfyui"
Issues = "https://github.com/leonardomiramondi/flux-context-comfyui/issues"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.comfyui]
title = "Flux Context Node"
description = "Image editing with Flux Context AI models"
category = "image/editing"
author = "Leonardo Miramondi"
tags = ["image", "editing", "ai", "flux", "context", "replicate"] 